--- a/index.htm
+++ b/index.htm
@@ -3,15 +3,32 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="robots" content="all">
   <meta name="author" content="Tencent-CP">
   <meta name="Copyright" content="Tencent">
   <meta name="Description" content="">
   <meta name="Keywords" content="腾讯游戏">
-  <title>专题主题（标题）- 产品中文全称官方网站 - 腾讯游戏</title>
+  <title>腾讯Next idea 高校游戏创意制作大赛</title>
   <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/idangerous.swiper.css">
-  <!-- <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/common.css"> -->
-  <link rel="stylesheet" href="ossweb-img/css/common.css">
+  <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/common.css">
+  <!-- <link rel="stylesheet" href="ossweb-img/css/common.css"> -->
+  <script>
+  // 判断移动端
+  ;
+  (function() {
+    var ua = navigator.userAgent.toLowerCase();
+    var is_iPad = ua.match(/(ipad)/i) != null;
+    var is_mobile = !!ua.match(/applewebkit.*mobile.*/);
+    var is_mobi = ua.toLowerCase().match(/(ipod|iphone|android|coolpad|mmp|smartphone|midp|wap|xoom|symbian|j2me|blackberry|win ce)/i) != null;
+    is_mobi = is_mobi || is_mobile;
+    if (is_mobi) {
+      window.location.replace("https://gameinstitute.qq.com/act/a20170524match/index.shtml");
+    } else {
+      //window.location.replace("http://gameinstitute.qq.com/web2017/agreement.shtml");
+    }
+  })();
+  </script>
   <style>
   .ie-fix {
     display: block;
@@ -74,7 +91,7 @@
         </div>
         <div class="center">
           <div class="logo"><img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/logo.png" alt=""></div>
-          <a class="go-index" href="http://gameinstitute.qq.com/a20170529yxds/index.shtml#/home" alt="">进入官网</a>
+          <a class="go-index" href="http://gameinstitute.qq.com/act/a20170522nextidea/index.shtml#/home" alt="">进入官网</a>
           <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/console-boat.png" alt="" class="console-boat">
           <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/headset.png" alt="" class="headset">
           <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/riflemen.png" alt="" class="riflemen">
@@ -99,7 +116,7 @@
               <div class="content">
                 <p>HR、校招面试官直接参与评审
                   <br> 赛事直达GM面，更有校招补录机会
-                  <br> offer发放，一触即达</p>
+                  <br> offer发放，一触即达。</p>
               </div>
             </div>
           </div>
@@ -142,18 +159,7 @@
             </div>
             <div class="mentor-3 mentor-inner">
               <div class="person">
-                <div class="person-inner">
-                  <div>
-                    <div class="name">夏琳</div>
-                    <div class="intor">腾讯游戏学院院长</div>
-                  </div>
-                </div>
-              </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/sammi.jpg" alt="">
-            </div>
-            <div class="mentor-4 mentor-inner">
-              <div class="person">
-                <div class="person-inner">
+                <div class="person-inner">￼
                   <div>
                     <div class="name">刘子建</div>
                     <div class="intor">腾讯游戏学院副院长</div>
@@ -161,6 +167,17 @@
                 </div>
               </div>
               <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/jim.jpg" alt="">
+            </div>
+            <div class="mentor-4 mentor-inner">
+              <div class="person">
+                <div class="person-inner">
+                  <div>
+                    <div class="name">杨峰</div>
+                    <div class="intor">天涯明月刀项目制作人</div>
+                  </div>
+                </div>
+              </div>
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170522nextidea/EW0A7378.JPG" alt="">
             </div>
             <div class="mentor-5 mentor-inner">
               <div class="person">
@@ -221,7 +238,7 @@
           <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon-dark.png" alt="">
         </div>
         <div class="center">
-          <a class="go-index" href="http://gameinstitute.qq.com/a20170529yxds/index.shtml#/home" alt="">进入官网</a>
+          <a class="go-index" href="http://gameinstitute.qq.com/act/a20170522nextidea/index.shtml#/home" alt="">进入官网</a>
           <div class="info">
             <p class="title">重磅奖励惊喜多多</p>
           </div>
@@ -248,8 +265,8 @@
   <script type="text/javascript" src="//cdnjs.gtimg.com/cdnjs/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/idangerous.swiper.min.js"></script>
   <script src="//ossweb-img.qq.com/images/js/title.js"></script>
-  <!-- <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/common.js"></script> -->
-  <script type="text/javascript" src="ossweb-img/js/common.js"></script>
+  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/common.js"></script>
+  <!-- <script type="text/javascript" src="ossweb-img/js/common.js"></script> -->
   <script src="//ossweb-img.qq.com/images/js/PTT/ping_tcss_tgideas_https_min.js"></script>
   <script src="//qzs.qq.com/tencentvideo_v1/js/tvp/tvp.player.js" charset="utf-8"></script>
   <script src="//game.gtimg.cn/images/js/milo/milo-min.js"></script>
@@ -288,7 +305,7 @@
   //   ingame: 0, //选填项:是否投放在游戏APP内boolean；默认是0；可以在链接上加入参数ingame=1来灵活设置
   //   stayTime: 0 //选填项:是否需要统计停留时长boolean；默认是0
   // }
-  // if (typeof(pgvMain) == 'function') pgvMain(); //千万不能忘记！
+  if (typeof(pgvMain) == 'function') pgvMain(); //千万不能忘记！
   </script>
 </body>
 
