--- a/index.html
+++ b/index.html
@@ -10,25 +10,9 @@
   <meta name="Description" content="">
   <meta name="Keywords" content="腾讯游戏">
   <title>腾讯Next idea 高校游戏创意制作大赛</title>
-  <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/idangerous.swiper.css">
-  <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/common.css">
-  <!-- <link rel="stylesheet" href="ossweb-img/css/common.css"> -->
-  <script>
-  // 判断移动端
-  ;
-  (function() {
-    var ua = navigator.userAgent.toLowerCase();
-    var is_iPad = ua.match(/(ipad)/i) != null;
-    var is_mobile = !!ua.match(/applewebkit.*mobile.*/);
-    var is_mobi = ua.toLowerCase().match(/(ipod|iphone|android|coolpad|mmp|smartphone|midp|wap|xoom|symbian|j2me|blackberry|win ce)/i) != null;
-    is_mobi = is_mobi || is_mobile;
-    if (is_mobi) {
-      window.location.replace("https://gameinstitute.qq.com/act/a20170524match/index.shtml");
-    } else {
-      //window.location.replace("http://gameinstitute.qq.com/web2017/agreement.shtml");
-    }
-  })();
-  </script>
+  <link rel="stylesheet" type="text/css" href="ossweb-img/css/idangerous.swiper.css">
+  <!-- <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/common.css"> -->
+  <link rel="stylesheet" href="ossweb-img/css/common.css">
   <style>
   .ie-fix {
     display: block;
@@ -76,7 +60,7 @@
 </head>
 
 <body>
-  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170522nextidea/kv.jpg" alt="" class="ie-fix" style="display: none;">
+  <img src="ossweb-img/image/kv.jpg" alt="" class="ie-fix" style="display: none;">
   <div class="mask" style="display:none">
     <div class="inner">
       您当前浏览器不支持本页面功能，请升级您的浏览器，或使用<a href="http://www.google.cn/chrome/">Google Chrome</a>, <a href="http://www.firefox.com.cn/download/">Firefox</a>等高级浏览器，将会得到更好的体验！
@@ -87,29 +71,29 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide nav slide-1">
         <div class="slide">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon.png" alt="">
+          <img src="ossweb-img/image/slide-icon.png" alt="">
         </div>
         <div class="center">
-          <div class="logo"><img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/logo.png" alt=""></div>
+          <div class="logo"><img src="ossweb-img/image/logo.png" alt=""></div>
           <a class="go-index" href="http://gameinstitute.qq.com/act/a20170522nextidea/index.shtml#/home" alt="">进入官网</a>
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/console-boat.png" alt="" class="console-boat">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/headset.png" alt="" class="headset">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/riflemen.png" alt="" class="riflemen">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/robot-2.png" alt="" class="robot-2">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/tablets.png" alt="" class="tablets">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/keyboard.png" alt="" class="keyboard">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/plane.png" alt="" class="plane">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/bg-nav.png" alt="" class="bg-nav">
+          <img src="ossweb-img/image/console-boat.png" alt="" class="console-boat">
+          <img src="ossweb-img/image/headset.png" alt="" class="headset">
+          <img src="ossweb-img/image/riflemen.png" alt="" class="riflemen">
+          <img src="ossweb-img/image/robot-2.png" alt="" class="robot-2">
+          <img src="ossweb-img/image/tablets.png" alt="" class="tablets">
+          <img src="ossweb-img/image/keyboard.png" alt="" class="keyboard">
+          <img src="ossweb-img/image/plane.png" alt="" class="plane">
+          <img src="ossweb-img/image/bg-nav.png" alt="" class="bg-nav">
         </div>
       </div>
       <div class="swiper-slide slide-2">
         <div class="slide">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon.png" alt="">
+          <img src="ossweb-img/image/slide-icon.png" alt="">
         </div>
         <div class="center">
           <div class="letter">
             <div class="envelope">
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/envelope.png" alt="">
+              <img src="ossweb-img/image/envelope.png" alt="">
             </div>
             <div class="letter-paper info">
               <p class="title">腾讯游戏offer等你来拿</p>
@@ -122,12 +106,12 @@
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-2-bg.png" alt="">
+          <img src="ossweb-img/image/slide-2-bg.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-3">
         <div class="slide">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon-dark.png" alt="">
+          <img src="ossweb-img/image/slide-icon-dark.png" alt="">
         </div>
         <div class="center">
           <div class="info">
@@ -144,7 +128,7 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/walker.jpg" alt="">
+              <img src="ossweb-img/image/walker.jpg" alt="">
             </div>
             <div class="mentor-2 mentor-inner">
               <div class="person">
@@ -155,7 +139,7 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/lishen.jpg" alt="">
+              <img src="ossweb-img/image/lishen.jpg" alt="">
             </div>
             <div class="mentor-3 mentor-inner">
               <div class="person">
@@ -166,7 +150,7 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/jim.jpg" alt="">
+              <img src="ossweb-img/image/jim.jpg" alt="">
             </div>
             <div class="mentor-4 mentor-inner">
               <div class="person">
@@ -177,7 +161,7 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170522nextidea/EW0A7378.JPG" alt="">
+              <img src="ossweb-img/image/EW0A7378.JPG" alt="">
             </div>
             <div class="mentor-5 mentor-inner">
               <div class="person">
@@ -188,54 +172,54 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/hanjin.jpg" alt="">
+              <img src="ossweb-img/image/hanjin.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-3-bg.png" alt="">
+          <img src="ossweb-img/image/slide-3-bg.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-4">
         <div class="slide">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon.png" alt="">
+          <img src="ossweb-img/image/slide-icon.png" alt="">
         </div>
         <div class="center">
           <div class="info">
             <p class="title">真实游戏制作全过程</p>
           </div>
           <div class="line">
-            <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/line.png" alt="">
+            <img src="ossweb-img/image/line.png" alt="">
           </div>
           <div class="process">
             <div class="process-item item-1">
               <p>制作过程全真感受</p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-1.png" alt="">
+              <img src="ossweb-img/image/icon-1.png" alt="">
             </div>
             <div class="process-item item-2">
               <p>游戏策划专业指导资料</p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-2.png" alt="">
+              <img src="ossweb-img/image/icon-2.png" alt="">
             </div>
             <div class="process-item item-3">
               <p>前沿创新实验室
                 <br> Next <span>（New Experience and Technology）</span>
                 <br> 研发中心支持创意孵化 </p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-3.png" alt="">
+              <img src="ossweb-img/image/icon-3.png" alt="">
             </div>
             <div class="process-item item-4">
               <p>2017全新战略项目
                 <br> “极光计划”
                 <br> 扶持作品制作上线</p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-4.png" alt=""></div>
+              <img src="ossweb-img/image/icon-4.png" alt=""></div>
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-4-bg.png" alt="">
+          <img src="ossweb-img/image/slide-4-bg.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-5">
         <div class="slide">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon-dark.png" alt="">
+          <img src="ossweb-img/image/slide-icon-dark.png" alt="">
         </div>
         <div class="center">
           <a class="go-index" href="http://gameinstitute.qq.com/act/a20170522nextidea/index.shtml#/home" alt="">进入官网</a>
@@ -243,33 +227,29 @@
             <p class="title">重磅奖励惊喜多多</p>
           </div>
           <div class="center-element">
-            <img class="left element" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-left.png" alt="">
-            <img class="element item-1" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-1.png" alt="">
-            <img class="element item-2" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-2.png" alt="">
-            <img class="element item-3" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-3.png" alt="">
-            <img class="element item-4" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-4.png" alt="">
-            <img class="element item-5" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-5.png" alt="">
-            <img class="right element" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-right.png" alt="">
+            <img class="left element" src="ossweb-img/image/element-left.png" alt="">
+            <img class="element item-1" src="ossweb-img/image/element-1.png" alt="">
+            <img class="element item-2" src="ossweb-img/image/element-2.png" alt="">
+            <img class="element item-3" src="ossweb-img/image/element-3.png" alt="">
+            <img class="element item-4" src="ossweb-img/image/element-4.png" alt="">
+            <img class="element item-5" src="ossweb-img/image/element-5.png" alt="">
+            <img class="right element" src="ossweb-img/image/element-right.png" alt="">
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-5-bg.png" alt="">
+          <img src="ossweb-img/image/slide-5-bg.png" alt="">
         </div>
       </div>
     </div>
   </div>
-  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/planet.png" alt="" class="planet">
-  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/robot.png" alt="" class="robot">
+  <img src="ossweb-img/image/planet.png" alt="" class="planet">
+  <img src="ossweb-img/image/robot.png" alt="" class="robot">
   <canvas id="canvas"></canvas>
   <div class="bg"></div>
   <script type="text/javascript" src="//cdnjs.gtimg.com/cdnjs/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/idangerous.swiper.min.js"></script>
-  <script src="//ossweb-img.qq.com/images/js/title.js"></script>
-  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/common.js"></script>
-  <!-- <script type="text/javascript" src="ossweb-img/js/common.js"></script> -->
-  <script src="//ossweb-img.qq.com/images/js/PTT/ping_tcss_tgideas_https_min.js"></script>
-  <script src="//qzs.qq.com/tencentvideo_v1/js/tvp/tvp.player.js" charset="utf-8"></script>
-  <script src="//game.gtimg.cn/images/js/milo/milo-min.js"></script>
+  <script type="text/javascript" src="ossweb-img/js/idangerous.swiper.min.js"></script>
+  <!-- <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/common.js"></script> -->
+  <script type="text/javascript" src="ossweb-img/js/common.js"></script>
   <script type="text/javascript">
   $(function() {
     app.init();
@@ -295,17 +275,6 @@
   } else {
     $('.ie-fix').hide();
   }
-
-  // //此段代码不能放到外链JS中，
-  // var setSite = { //设置网站属性
-  //   siteType: "os" || "a20160711xxx", //必填项:"os"代表是官网，如果不是，则填写actName例如a20160701xxx
-  //   pageType: "index", //必填项:本页面的定位；按照页面含义填写例如main||list||detail||download||share||page1||pageN
-  //   pageName: "首页", //必填项:页面中文名
-  //   osact: 0, //选填项:是否是官网专题(在官网运营的专题)boolean；默认是0；可以在链接上加入参数osact=1来灵活设置
-  //   ingame: 0, //选填项:是否投放在游戏APP内boolean；默认是0；可以在链接上加入参数ingame=1来灵活设置
-  //   stayTime: 0 //选填项:是否需要统计停留时长boolean；默认是0
-  // }
-  if (typeof(pgvMain) == 'function') pgvMain(); //千万不能忘记！
   </script>
 </body>
 
