切换官方引用地址，换成自己服务器地址。

--- a/index.html
+++ b/index.html
@@ -85,26 +85,10 @@
   <!-- 添加 RSS 订阅 -->
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
   <!-- 添加 favicon icon -->
-  <link rel="stylesheet" href="//gameinstitute.qq.com/act/a20170524match/css/swiper.min.css">
-  <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170524match/css/common.css">
-  <!-- <link rel="stylesheet" type="text/css" href="ossweb-img/css/common.css"> -->
+  <link rel="stylesheet" href="ossweb-img/css/swiper.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170524match/css/common.css"> -->
+  <link rel="stylesheet" type="text/css" href="ossweb-img/css/common.css">
   <title>腾讯NI高校游戏创意制作大赛</title>
-  <!-- <script>
-  // 判断移动端
-  ;
-  (function() {
-    var ua = navigator.userAgent.toLowerCase();
-    var is_iPad = ua.match(/(ipad)/i) != null;
-    var is_mobile = !!ua.match(/applewebkit.*mobile.*/);
-    var is_mobi = ua.toLowerCase().match(/(ipod|iphone|android|coolpad|mmp|smartphone|midp|wap|xoom|symbian|j2me|blackberry|win ce)/i) != null;
-    is_mobi = is_mobi || is_mobile;
-    if (is_mobi) {
-      //window.location.replace("https://gameinstitute.qq.com/act/a20170524match/index.shtml");
-    } else {
-      window.location.replace("http://gameinstitute.qq.com/act/a20170526guide/index.htm");
-    }
-  })();
-  </script> -->
   <style>
   b.text-font {
     font-size: .12rem !important;
@@ -120,19 +104,19 @@
   <div class="swiper-container wrapper" id="content">
     <div class="swiper-wrapper">
       <div class="swiper-slide nav slide-1">
-        <div class="logo"><img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/logo-2.png" alt=""></div>
-        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/console-boat.png" alt="" class="console-boat">
-        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/headset.png" alt="" class="headset">
-        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/riflemen.png" alt="" class="riflemen">
-        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/plane.png" alt="" class="plane">
-        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/plane2.png" alt="" class="plane2">
-        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/bg-index.png" alt="" class="bg-index">
+        <div class="logo"><img src="ossweb-img/image/logo-2.png" alt=""></div>
+        <img src="ossweb-img/image/console-boat.png" alt="" class="console-boat">
+        <img src="ossweb-img/image/headset.png" alt="" class="headset">
+        <img src="ossweb-img/image/riflemen.png" alt="" class="riflemen">
+        <img src="ossweb-img/image/plane.png" alt="" class="plane">
+        <img src="ossweb-img/image/plane2.png" alt="" class="plane2">
+        <img src="ossweb-img/image/bg-index.png" alt="" class="bg-index">
       </div>
       <div class="swiper-slide slide-2">
         <div class="center">
           <div class="letter">
             <div class="envelope">
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/envelope.png" alt="">
+              <img src="ossweb-img/image/envelope.png" alt="">
             </div>
             <div class="letter-paper info">
               <p class="title">腾讯游戏offer等你来拿</p>
@@ -145,7 +129,7 @@
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/bg-2.png" alt="">
+          <img src="ossweb-img/image/bg-2.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-3">
@@ -166,7 +150,7 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/walker.jpg" alt="">
+              <img src="ossweb-img/image/walker.jpg" alt="">
             </div>
             <div class="mentor-2 mentor-inner">
               <div class="person">
@@ -177,7 +161,7 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/lishen.jpg" alt="">
+              <img src="ossweb-img/image/lishen.jpg" alt="">
             </div>
             <div class="mentor-3 shadow mentor-inner">
               <div class="person">
@@ -188,7 +172,7 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/jim.jpg" alt="">
+              <img src="ossweb-img/image/jim.jpg" alt="">
             </div>
             <div class="mentor-4 mentor-inner">
               <div class="person">
@@ -210,12 +194,12 @@
                   </div>
                 </div>
               </div>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/hanjin.jpg" alt="">
+              <img src="ossweb-img/image/hanjin.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/bg-3.png" alt="">
+          <img src="ossweb-img/image/bg-3.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-4">
@@ -226,12 +210,12 @@
           <div class="process">
             <div class="process-item item-1">
               <p>制作过程全真感受</p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/icon-1.png" alt="">
+              <img src="ossweb-img/image/icon-1.png" alt="">
             </div>
             <div class="process-item item-2">
               <p>游戏策划
                 <br>专业指导资料</p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/icon-2.png" alt="">
+              <img src="ossweb-img/image/icon-2.png" alt="">
             </div>
             <div class="process-item item-3">
               <p>前沿创新实验室
@@ -239,16 +223,16 @@
                 <span><b style="font-weight:normal; font-size: 0.12rem;">Next</b>（New Experience and Technology）</span>
                 <br> 研发中心支持创意孵化
               </p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/icon-3.png" alt="">
+              <img src="ossweb-img/image/icon-3.png" alt="">
             </div>
             <div class="process-item item-4">
               <p>2017全新战略项目 “极光计划”
                 <br> 扶持作品制作上线</p>
-              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/icon-4.png" alt=""></div>
+              <img src="ossweb-img/image/icon-4.png" alt=""></div>
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/bg-4.png" alt="">
+          <img src="ossweb-img/image/bg-4.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-5">
@@ -258,15 +242,15 @@
             <p class="title">重磅奖励惊喜多多</p>
           </div>
           <div class="center-element">
-            <img class="element item-1" src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/element-3.png" alt="">
-            <img class="element item-2" src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/element-2.png" alt="">
-            <img class="element item-3" src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/element-5.png" alt="">
-            <img class="element item-4" src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/element-4.png" alt="">
-            <img class="element item-5" src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/element-1.png" alt="">
+            <img class="element item-1" src="ossweb-img/image/element-3.png" alt="">
+            <img class="element item-2" src="ossweb-img/image/element-2.png" alt="">
+            <img class="element item-3" src="ossweb-img/image/element-5.png" alt="">
+            <img class="element item-4" src="ossweb-img/image/element-4.png" alt="">
+            <img class="element item-5" src="ossweb-img/image/element-1.png" alt="">
           </div>
         </div>
         <div class="bg">
-          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/bg-5.png" alt="">
+          <img src="ossweb-img/image/bg-5.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-6">
@@ -305,38 +289,15 @@
       </div>
     </div>
   </div>
-  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/planet.png" alt="" class="planet">
-  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/robot.png" alt="" class="robot">
+  <img src="ossweb-img/image/planet.png" alt="" class="planet">
+  <img src="ossweb-img/image/robot.png" alt="" class="robot">
   <canvas id="canvas"></canvas>
-  <div class="bg"><img src="//game.gtimg.cn/images/gameinstitute/act/a20170524match/bg.jpg" alt=""></div>
+  <div class="bg"><img src="ossweb-img/image/bg.jpg" alt=""></div>
   <script src="http://ossweb-img.qq.com/images/js/jquery/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170524match/js/swiper.min.js"></script>
-  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170524match/js/common.js"></script>
-  <!-- <script type="text/javascript" src="ossweb-img/js/common.js"></script> -->
-  <script type="text/javascript" src="http://ossweb-img.qq.com/images/js/milo/milo.js"></script>
-  <script type="text/javascript" src="http://ossweb-img.qq.com/images/ams/atm/reporting.js?action=113028"></script>
+  <!-- <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170524match/js/common.js"></script> -->
+  <script type="text/javascript" src="ossweb-img/js/common.js"></script>
   <script type="text/javascript">
-  //个人信息填写
-  amsCfg_369445 = {
-    "iActivityId": 113028, //活动id
-    "iFlowId": 369445, //流程id
-    "_everyRead": true, //
-    "fFlowSubmitEnd": function(res) {
-      var code = res.sOutValue1; //状态码
-      if (code == 1) {
-        alert('更新成功！') //替换成对应状态展示界面
-      }
-      if (code > 1) {
-        alert('插入成功！') //替换成对应状态展示界面
-      }
-      return;
-    },
-    "fFlowSubmitFailed": function() {
-      //失败会走到这个函数
-      //条件不满足，ame返回大于0是后走到这里
-    }
-  };
-
   $('#submit').click(function(e) {
     e.preventDefault();
     var qq = $("#qq").val();
@@ -398,40 +359,6 @@
   $(function() {
     app.init();
   })
-  </script>
-  <script src="//ossweb-img.qq.com/images/js/dcv/ww_tcss.js"></script>
-  <script>
-  if (typeof(pgvMain) == 'function') pgvMain(); //点击流统计;
-  </script>
-  <script src="//ossweb-img.qq.com/images/js/TGMobileShare/TGMobileShare.min.js"></script>
-  <script>
-  //分享
-  TGMobileShare({
-    //不设置或设置为空时，页面有title，则调取title
-    shareTitle: '不校招也能拿腾讯游戏offer的秘籍',
-    //不设置或设置为空时，页面有Description，则调取Description
-    shareDesc: '大赛火热报名中，叫上你的小伙伴一起来开启梦想吧！',
-    //分享图片尺寸200*200，大小控制在10k左右，且填写绝对路径
-    shareImgUrl: 'https://game.gtimg.cn/images/gameinstitute/act/a20170524match/share.jpg',
-    //分享链接要跟当前页面同域名(手Q分享有这个要求) ,不设置或设置为空时，默认调取当前URL
-    shareLink: 'https://gameinstitute.qq.com/act/a20170524match/index.shtml?ADTAG=cop.innercop.client.share',
-    //点击流命名，用于统计分享量，专题一般采用目录名称如a20151029demo
-    actName: actName
-  });
-
-  function gotoPage(arg) //canvas->js,按钮点击事件,参数为按钮标识符;
-  {
-    console.log('gotoPage:', arg);
-    alert(arg);
-    switch (arg) {
-      case 'download': //下载游戏;
-
-        break;
-      case 'get': //获取游戏礼包;
-
-        break;
-    }
-  }
   </script>
 </body>
 
